2002-10-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-select-buffer-mode): Add some key descriptions to
	the doc-string.

2002-10-17  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* icons/db-history-up.xpm: Add missing comma.

2002-10-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-e21.el (w3m-buffer-favicon): Bind local null handler with
	`w3m-process-with-null-handler' instead of `lexical-let'.

2002-10-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* .cvsignore: Sync up to main trunk.

2002-10-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-rendering-half-dump): To decide whether
	`w3m-treat-image-size' is ignored, use
	`w3m-display-inline-images-p' instead of `w3m-display-graphic-p'.
	Thanks to Mito for his report.
	(w3m-about): Add `witdh' and `height' property to <img> tag.

2002-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-emacs-w3m-icon): Use helvetica-bold to widen image.

2002-10-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-lynx-like-map): Don't define key bindings for
	`w3m-zoom-out-image' and `w3m-zoom-in-image' when emacs-w3m in
	running in non-graphical display.
	(w3m-info-like-map): Ditto.

2002-10-15  KAMO Tomoyuki  <kamo@ITmanage.co.jp>

	* shimbun/sb-tcup.el (shimbun-tcup-get-group-key): Return
	(hostname . board-id) to support Tripod "personal BBS".
	(shimbun-tcup-make-id): Follow the above change.

2002-10-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-dump-head-source): Do not display the help
	message when `w3m-process-with-wait-handler' is evaluated.
	(w3m-make-separator): New function.
	(w3m-about-header): Use the above function.

	* w3m-proc.el (w3m-process-waited): New variable.
	(w3m-process-error-handler): New function.
	(w3m-process-with-wait-handler): Wrap the critical part with
	`condition-case' to clean running processes up when `quit' signal
	is occured.

2002-10-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
